Эксперименты с сетками в Bootstrap

--- a/index.html
+++ b/index.html
@@ -11,16 +11,29 @@
 <body>
 
   <header class="container">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
   </header>
 
   <main class="container">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id ut quidem provident pariatur architecto et cupiditate error ad nostrum nesciunt! Tempore obcaecati sapiente explicabo. Impedit rem quos nesciunt accusamus aperiam!</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <div class="row">
+      <p class="col-md">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <p class="col-md">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <p class="col-md">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+    </div>
   </main>
 
   <footer class="container">
-    <p>Лорем ипсум долор сит амет, утамур еурипидис цонституам еи хис. Ех еверти феугиат яуи, лабитур перфецто алияуандо сеа ин, темпор еяуидем еа пер. Ет меа дицунт нолуиссе принципес, ех аццумсан платонем нец, еа аргументум сцрипсерит сеа. Еа агам путент еурипидис нец. Ид еним убияуе нам, цум цонгуе облияуе ет. Но вим солута луцилиус, анимал суавитате еу меи.</p>
+    <p>
+      Лорем ипсум долор сит амет, утамур еурипидис цонституам еи хис. Ех еверти феугиат яуи, лабитур перфецто алияуандо сеа ин, темпор еяуидем еа пер. Ет меа дицунт нолуиссе принципес, ех аццумсан платонем нец, еа аргументум сцрипсерит сеа. Еа агам путент еурипидис нец. Ид еним убияуе нам, цум цонгуе облияуе ет. Но вим солута луцилиус, анимал суавитате еу меи.
+    </p>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
