Начал работать над шапкой

--- a/index.html
+++ b/index.html
@@ -10,10 +10,37 @@
 </head>
 <body>
 
-  <header class="container">
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
+  <header class="container  header">
+    <div class="row">
+      <div class="col-md  header__contacts">
+        <address>
+          <abbr title="Телефон"><strong>Тел.:</strong></abbr>
+          <br>
+          +79313483826
+          <br>
+          +79213009822
+          <br>
+        </address>
+        <address>
+          <strong>Адрес:</strong>
+          <br>
+          Санкт-Петербург
+          <br>
+          Октябрьская набережная д.50
+          <br>
+        </address>
+      </div>
+      <div class="col-md">
+        <img class="mx-auto  d-block" src="img/logo.png" alt="Pictor">
+      </div>
+      <div class="col-md  header__about">
+        <p>Профессиональная покраска мдф, шпон, массив.</p>
+        <p>Изготовление мдф фасадов.</p>
+      </div>
+    </div>
+    <div class="row">
+
+    </div>
   </header>
 
   <main class="container">
