Выровнял header__contacts и header__about

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <header class="container  header">
     <div class="row">
-      <div class="col-md  header__contacts">
+      <div class="col-md  d-flex  flex-column  justify-content-center  header__contacts">
         <address>
           <abbr title="Телефон"><strong>Тел.:</strong></abbr>
           <br>
@@ -33,9 +33,8 @@
       <div class="col-md">
         <img class="mx-auto  d-block" src="img/logo.png" alt="Pictor">
       </div>
-      <div class="col-md  header__about">
-        <p>Профессиональная покраска мдф, шпон, массив.</p>
-        <p>Изготовление мдф фасадов.</p>
+      <div class="col-md  d-flex  flex-column  justify-content-center  header__about">
+        <p>Профессиональная покраска мдф, шпон, массив. <br>Изготовление мдф фасадов.</p>
       </div>
     </div>
     <div class="row">
