--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 
-  <header class="container  header">
+  <header class="container header">
     <div class="row">
-      <div class="col-md  d-flex  flex-column  justify-content-center  header__contacts">
+      <div class="col-md d-flex flex-column justify-content-center header__contacts">
         <address>
           <abbr title="Телефон"><strong>Тел.:</strong></abbr>
           <br>
@@ -31,15 +31,34 @@
         </address>
       </div>
       <div class="col-md">
-        <img class="mx-auto  d-block" src="img/logo.png" alt="Pictor">
+        <img class="mx-auto d-block" src="img/logo.png" alt="Pictor">
       </div>
-      <div class="col-md  d-flex  flex-column  justify-content-center  header__about">
+      <div class="col-md d-flex flex-column justify-content-center header__about">
         <p>Профессиональная покраска мдф, шпон, массив. <br>Изготовление мдф фасадов.</p>
       </div>
     </div>
-    <div class="row">
 
-    </div>
+    <nav role="navigation" class="navbar navbar-expand-md navbar-dark bg-dark">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">
+              Главная
+              <span class="sr-only">(текущая)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">О нас</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Контакты</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
   </header>
 
   <main class="container">
