--- a/about_us.html
+++ b/about_us.html
@@ -52,13 +52,12 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-pills nav-justified">
               <li class="nav-item">
-                <a class="nav-link active" href="#">
-                  Главная
-                  <span class="sr-only">(текущая)</span>
-                </a>
+                <a class="nav-link" href="index.html">Главная</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about_us.html">О нас</a>
+                <a class="nav-link active" href="#">О нас
+                  <span class="sr-only">(текущая)</span>
+                </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contacts.html">Контакты</a>
@@ -100,6 +99,7 @@
       агам путент еурипидис нец. Ид еним убияуе нам, цум цонгуе облияуе ет. Но вим солута луцилиус, анимал суавитате еу меи.
     </p>
   </footer>
+
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
