--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-pills nav-justified">
+            <ul class="navbar-nav nav-pills nav-justified w-100">
               <li class="nav-item">
                 <a class="nav-link active" href="#">
                   Главная
@@ -71,26 +71,29 @@
   </header>
 
   <main class="container">
-    <div class="row">
-      <p class="col-md">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-      <p class="col-md">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-      <p class="col-md">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-    </div>
+    <section class="row">
+      <div class="col-md-4">
+        <h2 class="text-center">Покраска</h2>
+        <a href="">
+          <img class="img-fluid rounded img-thumbnail" src="img/01.jpg" alt="Покраска">
+        </a>
+        <a href=""></a>
+      </div>
+      <div class="col-md-4">
+        <h2 class="text-center">Изготовление</h2>
+        <a href="">
+          <img class="img-fluid rounded img-thumbnail" src="img/02.jpg" alt="Изготовление">
+        </a>
+        <a href=""></a>
+      </div>
+      <div class="col-md-4">
+        <h2 class="text-center">Реставрация</h2>
+        <a href="">
+          <img class="img-fluid rounded img-thumbnail" src="img/03.jpg" alt="Реставрация">
+        </a>
+        <a href=""></a>
+      </div>
+    </section>
   </main>
 
   <footer class="container">
