работа над .main-section

--- a/index.html
+++ b/index.html
@@ -71,27 +71,27 @@
   </header>
 
   <main class="container">
-    <section class="row">
+    <section class="row main-section">
       <div class="col-md-4">
         <h2 class="text-center">Покраска</h2>
-        <a href="">
-          <img class="img-fluid rounded img-thumbnail" src="img/01.jpg" alt="Покраска">
+        <a href="pokraska.html">
+          <img class="img-fluid rounded img-thumbnail mx-auto d-block" src="img/01.jpg" alt="Покраска">
         </a>
-        <a href=""></a>
+        <a class="btn btn-primary d-block mx-auto" href="pokraska.html">Узнать больше</a>
       </div>
       <div class="col-md-4">
         <h2 class="text-center">Изготовление</h2>
-        <a href="">
-          <img class="img-fluid rounded img-thumbnail" src="img/02.jpg" alt="Изготовление">
+        <a href="izgotovlenie">
+          <img class="img-fluid rounded img-thumbnail mx-auto d-block" src="img/02.jpg" alt="Изготовление">
         </a>
-        <a href=""></a>
+        <a class="btn btn-primary d-block mx-auto" href="izgotovlenie">Узнать больше</a>
       </div>
       <div class="col-md-4">
         <h2 class="text-center">Реставрация</h2>
-        <a href="">
-          <img class="img-fluid rounded img-thumbnail" src="img/03.jpg" alt="Реставрация">
+        <a href="restavraciya">
+          <img class="img-fluid rounded img-thumbnail mx-auto d-block" src="img/03.jpg" alt="Реставрация">
         </a>
-        <a href=""></a>
+        <a class="btn btn-primary d-block mx-auto" href="restavraciya">Узнать больше</a>
       </div>
     </section>
   </main>
