--- a/contacts.html
+++ b/contacts.html
@@ -55,7 +55,7 @@
                 <a class="nav-link" href="index.html">Главная</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about_us.html">О нас</a>
+                <a class="nav-link" href="about-us.html">О нас</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link  active" href="#">Контакты
