--- a/index.html
+++ b/index.html
@@ -96,12 +96,11 @@
     </section>
   </main>
 
-  <footer class="container">
-    <p>
-      Лорем ипсум долор сит амет, утамур еурипидис цонституам еи хис. Ех еверти феугиат яуи, лабитур перфецто алияуандо сеа ин,
-      темпор еяуидем еа пер. Ет меа дицунт нолуиссе принципес, ех аццумсан платонем нец, еа аргументум сцрипсерит сеа. Еа
-      агам путент еурипидис нец. Ид еним убияуе нам, цум цонгуе облияуе ет. Но вим солута луцилиус, анимал суавитате еу меи.
-    </p>
+  <footer class="container-fluid bg-dark">
+    <div class="container text-light text-center">
+      <p class="mb-0">Профессиональная покраска мдф, шпон, массив. Изготовление мдф фасадов.</p>
+      <address>Адрес: Октябрьская набережная 50 тел: +79313483826</address>
+    </div>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
