--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <footer class="container-fluid bg-dark">
     <div class="container text-light text-center">
       <p class="mb-0">Профессиональная покраска мдф, шпон, массив. Изготовление мдф фасадов.</p>
-      <address>Адрес: Октябрьская набережная 50 тел: +79313483826</address>
+      <address class="mb-0">Адрес: Октябрьская набережная 50. Tел: +79313483826</address>
     </div>
   </footer>
 
