--- a/test.html
+++ b/test.html
@@ -15,22 +15,40 @@
     <div class="container">
       <div class="row">
         <div class="col-md d-flex flex-column justify-content-center header__contacts">
-          <adress><abbr title="Телефон"><strong>Тел.:</strong></abbr><br></adress>
+          <adress><abbr title="Телефон"><strong>Тел.:</strong></abbr>
+            <br>+79313483826
+            <br>+79213009822
+            <br>
+          </adress>
+          <adress><strong>Адрес:</strong>
+            <br>Санкт-Петербург
+            <br>Октябрьская набережная д.50
+            <br>
+          </adress>
+        </div>
+        <div class="col-md"><img class="mx-auto d-block" src="img/logo.png" alt="Pictor"></div>
+        <div class="col-md d-flex flex-column justify-content-center header__about">
+          <p>Профессиональная покраска мдф, шпон, массив.
+            <br>Изготовление мдф фасадов.</p>
         </div>
       </div>
     </div>
-  </header>
-  <main>
-    <header class="header">
+    <div class="container-fluid site-navigation bg-dark">
       <div class="container">
-        <div class="row">
-          <div class="col-md d-flex flex-column justify-content-center header__contacts">
-            <adress><abbr title="Телефон"><strong>Тел.:</strong></abbr><br></adress>
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<span class="navbar-toggler-icon"></span></button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav nav-pills nav-justified w-100">
+              <li class="nav-item"><a class="nav-link" href="#"></a></li>
+              <li class="nav-item"><a class="nav-link" href="#"></a></li>
+              <li class="nav-item"><a class="nav-link" href="#"></a></li>
+            </ul>
           </div>
-        </div>
+        </nav>
       </div>
-    </header>
-  </main>
+    </div>
+  </header>
 </body>
 
 </html>
