--- a/layout.html
+++ b/layout.html
@@ -36,19 +36,28 @@
     <div class="container-fluid site-navigation bg-dark">
       <div class="container">
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span></button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+          <div
+            class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-pills nav-justified w-100">
               <li class="nav-item"><a class="nav-link" href="#"></a></li>
               <li class="nav-item"><a class="nav-link" href="#"></a></li>
               <li class="nav-item"><a class="nav-link" href="#"></a></li>
             </ul>
-          </div>
-        </nav>
       </div>
+      </nav>
+    </div>
     </div>
   </header>
+  <footer class="container-fluid bg-dark">
+    <div class="container text-light text-center">
+      <p class="mb-0">Профессиональная покраска мдф, шпон, массив. Изготовление мдф фасадов.</p>
+      <adress class="mb-0">Адрес: Октябрьская набережная 50. Tел: +79313483826</adress>
+    </div>
+  </footer>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 </body>
 
 </html>
