--- a/layout.html
+++ b/layout.html
@@ -39,11 +39,7 @@
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div
             class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-pills nav-justified w-100">
-              <li class="nav-item"><a class="nav-link" href="#"></a></li>
-              <li class="nav-item"><a class="nav-link" href="#"></a></li>
-              <li class="nav-item"><a class="nav-link" href="#"></a></li>
-            </ul>
+            <ul class="navbar-nav nav-pills nav-justified w-100"></ul>
       </div>
       </nav>
     </div>
