--- a/start.html
+++ b/start.html
@@ -37,13 +37,16 @@
       <div class="container">
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <div
+            class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-pills nav-justified w-100">
-              <div class="testtest"></div>
+              <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
+              <li class="nav-item"><a class="nav-link active" href="#">О нас<span class="sr-only">(текущая)</span></a></li>
+              <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
             </ul>
-          </div>
-        </nav>
       </div>
+      </nav>
+    </div>
     </div>
   </header>
   <footer class="container-fluid bg-dark">
