--- a/about-us.html
+++ b/about-us.html
@@ -3,111 +3,75 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Pictor</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
-
   <header class="header">
     <div class="container">
       <div class="row">
         <div class="col-md d-flex flex-column justify-content-center header__contacts">
-          <address>
-            <abbr title="Телефон">
-              <strong>Тел.:</strong>
-            </abbr>
-            <br> +79313483826
-            <br> +79213009822
+          <adress><abbr title="Телефон"><strong>Тел.:</strong></abbr>
+            <br>+79313483826
+            <br>+79213009822
             <br>
-          </address>
-          <address>
-            <strong>Адрес:</strong>
-            <br> Санкт-Петербург
-            <br> Октябрьская набережная д.50
+          </adress>
+          <adress><strong>Адрес:</strong>
+            <br>Санкт-Петербург
+            <br>Октябрьская набережная д.50
             <br>
-          </address>
+          </adress>
         </div>
-        <div class="col-md">
-          <img class="mx-auto d-block" src="img/logo.png" alt="Pictor">
-        </div>
+        <div class="col-md"><img class="mx-auto d-block" src="img/logo.png" alt="Pictor"></div>
         <div class="col-md d-flex flex-column justify-content-center header__about">
           <p>Профессиональная покраска мдф, шпон, массив.
             <br>Изготовление мдф фасадов.</p>
         </div>
       </div>
     </div>
-
     <div class="container-fluid site-navigation bg-dark">
       <div class="container">
-        <nav role="navigation" class="navbar navbar-expand-md navbar-dark bg-dark">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-            aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-pills nav-justified">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">Главная</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#">О нас
-                  <span class="sr-only">(текущая)</span>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contacts.html">Контакты</a>
-              </li>
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+          <div
+            class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav nav-pills nav-justified w-100">
+              <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
+              <li class="nav-item"><a class="nav-link active" href="#">О нас<span class="sr-only">(текущая)</span></a></li>
+              <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
             </ul>
-          </div>
-        </nav>
       </div>
+      </nav>
+    </div>
     </div>
   </header>
-
-  <main class="container">
-    <div class="row">
-      <p class="col-md">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-      <p class="col-md">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-      <p class="col-md">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
+  <div class="container about-us p-4">
+    <p>Компания Pictor предлагает производителям мебели услуги по профессиональной покраске и изготовлению мдф фасадов, окраске целиком изделий из мдф, шпона, декоративных элементов из массива и пенополиуретана, любого погонажа: карнизы, багет, профили мдф
+      для рамочных фасадов и т.п.</p>
+    <p>Покраска осуществляется по международным каталогам RAL,NCS и WC полиуретановыми и акриловыми эмалями - на выбор более 4500 цветов. Это специальные мебельные эмали для покраски мдф и массива дерева. Возможна матовая или глянцевая покраска панелей мдф,
+      а также нанесение спецэффектов.</p><span>Наши преимущества:</span>
+    <ul type="disk">
+      <li>Высокое качество</li>
+      <li>Гибкая система скидок для постоянных клиентов и больших объемов</li>
+      <li>Индивидуальный подход к каждому клиенту</li>
+      <li>Короткие сроки исполнения заказа</li>
+      <li>Использование высококачественного оборудования и материалов</li>
+      <li>И самое главное – Профессионализм и ответственный подход к работе наших специалистов</li>
+    </ul>
+  </div>
+  <footer class="container-fluid bg-dark">
+    <div class="container text-light text-center">
+      <p class="mb-0">Профессиональная покраска мдф, шпон, массив. Изготовление мдф фасадов.</p>
+      <adress class="mb-0">Адрес: Октябрьская набережная 50. Tел: +79313483826</adress>
     </div>
-  </main>
-
-  <footer class="container">
-    <p>
-      Лорем ипсум долор сит амет, утамур еурипидис цонституам еи хис. Ех еверти феугиат яуи, лабитур перфецто алияуандо сеа ин,
-      темпор еяуидем еа пер. Ет меа дицунт нолуиссе принципес, ех аццумсан платонем нец, еа аргументум сцрипсерит сеа. Еа
-      агам путент еурипидис нец. Ид еним убияуе нам, цум цонгуе облияуе ет. Но вим солута луцилиус, анимал суавитате еу меи.
-    </p>
   </footer>
-
-
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
-    crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
-    crossorigin="anonymous"></script>
-
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 </body>
 
 </html>
