--- a/index.html
+++ b/index.html
@@ -3,113 +3,73 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Pictor</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
-
   <header class="header">
     <div class="container">
       <div class="row">
         <div class="col-md d-flex flex-column justify-content-center header__contacts">
-          <address>
-            <abbr title="Телефон">
-              <strong>Тел.:</strong>
-            </abbr>
-            <br> +79313483826
-            <br> +79213009822
+          <adress><abbr title="Телефон"><strong>Тел.:</strong></abbr>
+            <br>+79313483826
+            <br>+79213009822
             <br>
-          </address>
-          <address>
-            <strong>Адрес:</strong>
-            <br> Санкт-Петербург
-            <br> Октябрьская набережная д.50
+          </adress>
+          <adress><strong>Адрес:</strong>
+            <br>Санкт-Петербург
+            <br>Октябрьская набережная д.50
             <br>
-          </address>
+          </adress>
         </div>
-        <div class="col-md">
-          <img class="mx-auto d-block" src="img/logo.png" alt="Pictor">
-        </div>
+        <div class="col-md"><img class="mx-auto d-block" src="img/logo.png" alt="Pictor"></div>
         <div class="col-md d-flex flex-column justify-content-center header__about">
           <p>Профессиональная покраска мдф, шпон, массив.
             <br>Изготовление мдф фасадов.</p>
         </div>
       </div>
     </div>
-
     <div class="container-fluid site-navigation bg-dark">
       <div class="container">
-        <nav role="navigation" class="navbar navbar-expand-md navbar-dark bg-dark">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-          aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+          <div
+            class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-pills nav-justified w-100">
-              <li class="nav-item">
-                <a class="nav-link active" href="#">
-                  Главная
-                  <span class="sr-only">(текущая)</span>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about-us.html">О нас</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contacts.html">Контакты</a>
-              </li>
+              <li class="nav-item"><a class="nav-link active" href="#">Главная<span class="sr-only">(текущая)</span></a></li>
+              <li class="nav-item"><a class="nav-link" href="about-us.html">О нас</a></li>
+              <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
             </ul>
-          </div>
-        </nav>
       </div>
+      </nav>
+    </div>
     </div>
   </header>
-
   <main class="container">
     <section class="row main-section">
       <div class="col-md-4 mb-5">
-        <h2 class="main-section__title  text-center text-white bg-dark w-75 mx-auto mb-4">Покраска</h2>
-        <a class="mb-5 d-block" href="painting.html">
-          <img class="img-fluid rounded img-thumbnail mx-auto d-block" src="img/01.jpg" alt="Покраска">
-        </a>
-        <a class="btn btn-primary d-block mx-auto" href="painting.html">Узнать больше</a>
-      </div>
-      <div class="col-md-4 mb-5">
-        <h2 class="main-section__title  text-center text-white bg-dark w-75 mx-auto mb-4">Изготовление</h2>
-        <a class="mb-5 d-block" href="production.html">
-          <img class="img-fluid rounded img-thumbnail mx-auto d-block" src="img/02.jpg" alt="Изготовление">
-        </a>
-        <a class="btn btn-primary d-block mx-auto" href="production.html">Узнать больше</a>
-      </div>
-      <div class="col-md-4 mb-5">
-        <h2 class="main-section__title  text-center text-white bg-dark w-75 mx-auto mb-4">Реставрация</h2>
-        <a class="mb-5 d-block" href="restoration.html">
-          <img class="img-fluid rounded img-thumbnail mx-auto d-block" src="img/03.jpg" alt="Реставрация">
-        </a>
-        <a class="btn btn-primary d-block mx-auto" href="restoration.html">Узнать больше</a>
-      </div>
+        <h2 class="main-section__title text-center text-white bg-dark w-75 mx-auto mb-4">Покраска</h2><a class="mb-5 d-block" href="painting.html"><img class="img-fluid rounded img-thumbnail mx-auto d-block" src="img/01.jpg" alt="Покраска"></a><a class="btn btn-primary d-block mx-auto" href="painting.html">Узнать больше</a></div>
+      <div
+        class="col-md-4 mb-5">
+        <h2 class="main-section__title text-center text-white bg-dark w-75 mx-auto mb-4">Изготовление</h2><a class="mb-5 d-block" href="production.html"><img class="img-fluid rounded img-thumbnail mx-auto d-block" src="img/02.jpg" alt="Изготовление"></a><a class="btn btn-primary d-block mx-auto" href="production.html">Узнать больше</a></div>
+        <div
+          class="col-md-4 mb-5">
+          <h2 class="main-section__title text-center text-white bg-dark w-75 mx-auto mb-4">Реставрация</h2><a class="mb-5 d-block" href="restoration.html"><img class="img-fluid rounded img-thumbnail mx-auto d-block" src="img/03.jpg" alt="Реставрация"></a><a class="btn btn-primary d-block mx-auto" href="restoration.html">Узнать больше</a></div>
     </section>
   </main>
-
   <footer class="container-fluid bg-dark">
     <div class="container text-light text-center">
       <p class="mb-0">Профессиональная покраска мдф, шпон, массив. Изготовление мдф фасадов.</p>
-      <address class="mb-0">Адрес: Октябрьская набережная 50. Tел: +79313483826</address>
+      <adress class="mb-0">Адрес: Октябрьская набережная 50. Tел: +79313483826</adress>
     </div>
   </footer>
-
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
-    crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
-    crossorigin="anonymous"></script>
-
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 </body>
 
 </html>
