добавил карту на contacts.html

--- a/about-us.html
+++ b/about-us.html
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="container-fluid site-navigation bg-dark">
-      <div class="container">
+      <div class="container px-0">
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div
@@ -49,12 +49,12 @@
     </div>
     </div>
   </header>
-  <div class="container about-us p-4">
+  <div class="container bg-semitransparent p-4">
     <p>Компания Pictor предлагает производителям мебели услуги по профессиональной покраске и изготовлению мдф фасадов, окраске целиком изделий из мдф, шпона, декоративных элементов из массива и пенополиуретана, любого погонажа: карнизы, багет, профили мдф
       для рамочных фасадов и т.п.</p>
     <p>Покраска осуществляется по международным каталогам RAL,NCS и WC полиуретановыми и акриловыми эмалями - на выбор более 4500 цветов. Это специальные мебельные эмали для покраски мдф и массива дерева. Возможна матовая или глянцевая покраска панелей мдф,
       а также нанесение спецэффектов.</p><span>Наши преимущества:</span>
-    <ul type="disk">
+    <ul class="mb-5" type="disk">
       <li>Высокое качество</li>
       <li>Гибкая система скидок для постоянных клиентов и больших объемов</li>
       <li>Индивидуальный подход к каждому клиенту</li>
