--- a/layout.html
+++ b/layout.html
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="container-fluid site-navigation bg-dark">
-      <div class="container">
+      <div class="container px-0">
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div
