--- a/index.html
+++ b/index.html
@@ -14,16 +14,8 @@
   <header class="header">
     <div class="container">
       <div class="row">
-        <div class="col-md d-flex flex-column justify-content-center header__contacts"><address><abbr title="Телефон"><strong>Тел.:</strong></abbr>
-<br>+79313483826
-<br>+79213009822
-<br>
-</address><address><strong>Адрес:</strong>
-<br>Санкт-Петербург
-<br>Октябрьская набережная д.50
-<br>
-</address></div>
-        <div class="col-md"><img class="mx-auto d-block" src="img/logo.png" alt="Pictor"></div>
+        <div class="col-md d-flex flex-column justify-content-center header__contacts"><address><abbr title="Телефон"><strong>Тел.:</strong></abbr><br>+79313483826<br>+79213009822<br></address><address><strong>Адрес:</strong><br>Санкт-Петербург<br>Октябрьская набережная д.50</address></div>
+        <div class="col-md"><a href="index.html"><img class="mx-auto d-block" src="img/logo.png" alt="Pictor"></a></div>
         <div class="col-md d-flex flex-column justify-content-center header__about">
           <p>Профессиональная покраска мдф, шпон, массив.
             <br>Изготовление мдф фасадов.</p>
@@ -32,8 +24,7 @@
     </div>
     <div class="container-fluid site-navigation bg-dark">
       <div class="container px-0">
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark"><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div
             class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-pills nav-justified w-100">
@@ -47,15 +38,15 @@
     </div>
   </header>
   <main class="container">
-    <section class="row main-section">
+    <section class="row main-content-index">
       <div class="col-md-4 mb-5">
-        <h2 class="main-section__title text-center text-white bg-dark w-75 mx-auto mb-4">Покраска</h2><a class="mb-5 d-block" href="painting.html"><img class="img-fluid rounded img-thumbnail mx-auto d-block" src="img/01.jpg" alt="Покраска"></a><a class="btn btn-primary d-block mx-auto" href="painting.html">Узнать больше</a></div>
+        <h2 class="main-content-index__title text-center text-white bg-dark w-75 mx-auto mb-4">Покраска</h2><a class="mb-5 d-block" href="painting.html"><img class="img-fluid rounded img-thumbnail mx-auto d-block" src="img/01.jpg" alt="Покраска"></a><a class="btn btn-primary d-block mx-auto" href="painting.html">Узнать больше</a></div>
       <div
         class="col-md-4 mb-5">
-        <h2 class="main-section__title text-center text-white bg-dark w-75 mx-auto mb-4">Изготовление</h2><a class="mb-5 d-block" href="production.html"><img class="img-fluid rounded img-thumbnail mx-auto d-block" src="img/02.jpg" alt="Изготовление"></a><a class="btn btn-primary d-block mx-auto" href="production.html">Узнать больше</a></div>
+        <h2 class="main-content-index__title text-center text-white bg-dark w-75 mx-auto mb-4">Изготовление</h2><a class="mb-5 d-block" href="production.html"><img class="img-fluid rounded img-thumbnail mx-auto d-block" src="img/02.jpg" alt="Изготовление"></a><a class="btn btn-primary d-block mx-auto" href="production.html">Узнать больше</a></div>
         <div
           class="col-md-4 mb-5">
-          <h2 class="main-section__title text-center text-white bg-dark w-75 mx-auto mb-4">Реставрация</h2><a class="mb-5 d-block" href="restoration.html"><img class="img-fluid rounded img-thumbnail mx-auto d-block" src="img/03.jpg" alt="Реставрация"></a><a class="btn btn-primary d-block mx-auto" href="restoration.html">Узнать больше</a></div>
+          <h2 class="main-content-index__title text-center text-white bg-dark w-75 mx-auto mb-4">Реставрация</h2><a class="mb-5 d-block" href="restoration.html"><img class="img-fluid rounded img-thumbnail mx-auto d-block" src="img/03.jpg" alt="Реставрация"></a><a class="btn btn-primary d-block mx-auto" href="restoration.html">Узнать больше</a></div>
     </section>
   </main>
   <footer class="container-fluid bg-dark">
