--- a/contacts.html
+++ b/contacts.html
@@ -37,7 +37,7 @@
     </div>
     </div>
   </header>
-  <div class="container bg-semitransparent p-4">
+  <main class="container bg-semitransparent p-4">
     <div class="row">
       <div class="col-md-6">
         <h1 class="h3 mb-4">Свяжитесь с нами</h1>
@@ -54,7 +54,7 @@ mail@pictorspb.com</a><br>Октябрьская набережная, 50а</add
       <div class="col-md-6 map-frame"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d16012.94786491774!2d30.434862222696214!3d59.88868299999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46962fb31c2ed849%3A0xf493a13a96a1ebb6!2z0J7QutGC0Y_QsdGA0YzRgdC60LDRjyDQvdCw0LEuLCA1MCwg0KHQsNC90LrRgi3Qn9C10YLQtdGA0LHRg9GA0LMsIDE5MzIzMA!5e0!3m2!1sru!2sru!4v1509043136092"
           width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" scrolling="off"></iframe></div>
     </div>
-  </div>
+  </main>
   <footer class="container-fluid bg-dark">
     <div class="container text-light text-center">
       <p class="mb-0">Профессиональная покраска мдф, шпон, массив. Изготовление мдф фасадов.</p><address class="mb-0">Адрес: Октябрьская набережная 50. Tел: +79313483826</address></div>
