--- a/painting.html
+++ b/painting.html
@@ -37,7 +37,7 @@
     </div>
     </div>
   </header>
-  <div class="container bg-semitransparent p-4">
+  <main class="container bg-semitransparent p-4">
     <p>Наш малярный цех предлагает широкий спектр услуг по профессиональной покраске столярных изделий, корпусной мебели и других деталей интерьера.</p>
     <p>Осуществляем покраску различных пород дерева, мдф, дсп, хдф, фанеры, пластика и шпона. Работаем с использованием высококачественных материалов и оборудования.</p>
     <p class="mb-4">Выполняем работу любой сложности в короткие сроки по доступным ценам! Для постоянных клиентов действует гибкая система скидок.</p><span>Виды покрасочных работ и цены (цена покрытия за 1 кв.м.):</span>
@@ -53,7 +53,7 @@
     <p>Выполняем любые спецэффекты : Патина, Тонировка, Глянец Краколет, Декапе, Полировка, Перламутр, Мрамор, Металлический мрамор, Жемчуг, Металлик, Текстурный металлик, Паутинка, Старение. Также возможны различные сочетания спецэффектов (цена варьируется
       от сложности заказа).</p>
     <p>Будем рады сотрудничать с Вами!</p>
-  </div>
+  </main>
   <footer class="container-fluid bg-dark">
     <div class="container text-light text-center">
       <p class="mb-0">Профессиональная покраска мдф, шпон, массив. Изготовление мдф фасадов.</p><address class="mb-0">Адрес: Октябрьская набережная 50. Tел: +79313483826</address></div>
