--- a/production.html
+++ b/production.html
@@ -29,7 +29,7 @@
             class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-pills nav-justified w-100">
               <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
-              <li class="nav-item"><a class="nav-link active" href="#">О нас<span class="sr-only">(текущая)</span></a></li>
+              <li class="nav-item"><a class="nav-link" href="about-us.html">О нас</a></li>
               <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
             </ul>
       </div>
@@ -37,20 +37,6 @@
     </div>
     </div>
   </header>
-  <main class="container bg-semitransparent p-4">
-    <p>Компания Pictor предлагает производителям мебели услуги по профессиональной покраске и изготовлению мдф фасадов, окраске целиком изделий из мдф, шпона, декоративных элементов из массива и пенополиуретана, любого погонажа: карнизы, багет, профили мдф
-      для рамочных фасадов и т.п.</p>
-    <p>Покраска осуществляется по международным каталогам RAL,NCS и WC полиуретановыми и акриловыми эмалями - на выбор более 4500 цветов. Это специальные мебельные эмали для покраски мдф и массива дерева. Возможна матовая или глянцевая покраска панелей мдф,
-      а также нанесение спецэффектов.</p><span>Наши преимущества:</span>
-    <ul class="mb-5" type="disk">
-      <li>Высокое качество</li>
-      <li>Гибкая система скидок для постоянных клиентов и больших объемов</li>
-      <li>Индивидуальный подход к каждому клиенту</li>
-      <li>Короткие сроки исполнения заказа</li>
-      <li>Использование высококачественного оборудования и материалов</li>
-      <li>И самое главное – Профессионализм и ответственный подход к работе наших специалистов</li>
-    </ul>
-  </main>
   <footer class="container-fluid bg-dark">
     <div class="container text-light text-center">
       <p class="mb-0">Профессиональная покраска мдф, шпон, массив. Изготовление мдф фасадов.</p><address class="mb-0">Адрес: Октябрьская набережная 50. Tел: +79313483826</address></div>
