--- a/restoration.html
+++ b/restoration.html
@@ -37,10 +37,10 @@
     </div>
     </div>
   </header>
-  <div class="container bg-semitransparent p-4">
+  <main class="container bg-semitransparent p-4">
     <p>Реставрация — это хорошая возможность продлить жизнь любимому предмету интерьера, обновление дизайна и красочный мебельный декор. Отреставрированная профессионалами мебель впоследствии может прослужить Вам несколько десятков лет.</p>
     <p>Компания Pictor предлагает вам услуги по реставрации вашей мебели. Наши специалисты уберут сколы и трещины, изменят или возвратят цвет вашего изделия, обновят и придадут свежий вид для вашей мебели.</p>
-  </div>
+  </main>
   <footer class="container-fluid bg-dark">
     <div class="container text-light text-center">
       <p class="mb-0">Профессиональная покраска мдф, шпон, массив. Изготовление мдф фасадов.</p><address class="mb-0">Адрес: Октябрьская набережная 50. Tел: +79313483826</address></div>
