Закончил вёрстку всех страниц

--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
     </div>
   </header>
   <main class="container">
-    <section class="row main-content-index">
+    <div class="row main-content-index">
       <div class="col-md-4 mb-5">
         <h2 class="main-content-index__title text-center text-white bg-dark w-75 mx-auto mb-4">Покраска</h2><a class="mb-5 d-block" href="painting.html"><img class="img-fluid rounded img-thumbnail mx-auto d-block" src="img/01.jpg" alt="Покраска"></a><a class="btn btn-primary d-block mx-auto" href="painting.html">Узнать больше</a></div>
       <div
         class="col-md-4 mb-5">
         <h2 class="main-content-index__title text-center text-white bg-dark w-75 mx-auto mb-4">Изготовление</h2><a class="mb-5 d-block" href="production.html"><img class="img-fluid rounded img-thumbnail mx-auto d-block" src="img/02.jpg" alt="Изготовление"></a><a class="btn btn-primary d-block mx-auto" href="production.html">Узнать больше</a></div>
-        <div
-          class="col-md-4 mb-5">
-          <h2 class="main-content-index__title text-center text-white bg-dark w-75 mx-auto mb-4">Реставрация</h2><a class="mb-5 d-block" href="restoration.html"><img class="img-fluid rounded img-thumbnail mx-auto d-block" src="img/03.jpg" alt="Реставрация"></a><a class="btn btn-primary d-block mx-auto" href="restoration.html">Узнать больше</a></div>
-    </section>
+    <div
+      class="col-md-4 mb-5">
+      <h2 class="main-content-index__title text-center text-white bg-dark w-75 mx-auto mb-4">Реставрация</h2><a class="mb-5 d-block" href="restoration.html"><img class="img-fluid rounded img-thumbnail mx-auto d-block" src="img/03.jpg" alt="Реставрация"></a><a class="btn btn-primary d-block mx-auto" href="restoration.html">Узнать больше</a></div>
+      </div>
   </main>
   <footer class="container-fluid bg-dark">
     <div class="container text-light text-center">
