--- a/production.html
+++ b/production.html
@@ -37,6 +37,15 @@
     </div>
     </div>
   </header>
+  <main class="container main-content-production">
+    <div class="row">
+      <div class="col-md-4 mb-5 ml-auto"><a class="mb-5 d-block" href="production-flat.html"><img class="img-fluid rounded img-thumbnail mx-auto d-block" src="img/04.jpg" alt="Плоские"></a><a class="btn btn-primary d-block mx-auto" href="production-flat.html">Плоские</a></div>
+      <div class="col-md-4 mb-5 mr-auto"><a class="mb-5 d-block" href="production-mill.html"><img class="img-fluid rounded img-thumbnail mx-auto d-block" src="img/05.jpg" alt="Фрезерованные"></a><a class="btn btn-primary d-block mx-auto" href="production-mill.html">Фрезерованные</a></div>
+    </div>
+    <div class="row">
+      <div class="col-md-12 mb-5"><a class="main-content-production__price-btn btn btn-primary d-block mx-auto" href="https://yadi.sk/i/dqgiRV2y3Lqqor">Скачать прайс-лист</a></div>
+    </div>
+  </main>
   <footer class="container-fluid bg-dark">
     <div class="container text-light text-center">
       <p class="mb-0">Профессиональная покраска мдф, шпон, массив. Изготовление мдф фасадов.</p><address class="mb-0">Адрес: Октябрьская набережная 50. Tел: +79313483826</address></div>
