Добавил логотип в высокм разрешении

--- a/about-us.html
+++ b/about-us.html
@@ -15,7 +15,12 @@
     <div class="container">
       <div class="row">
         <div class="col-md d-flex flex-column justify-content-center header__contacts"><address><abbr title="Телефон"><strong>Тел.:</strong></abbr><br>+79313483826<br>+79213009822<br></address><address><strong>Адрес:</strong><br>Санкт-Петербург<br>Октябрьская набережная д.50</address></div>
-        <div class="col-md"><a href="index.html"><img class="mx-auto d-block" src="img/logo.png" alt="Pictor"></a></div>
+        <div class="col-md">
+          <a href="index.html">
+            <picture>
+              <source srcset="img/logo@1x.png, img/logo@2x.png 2x"><img class="mx-auto d-block" src="img/logo@1x.png" alt="Pictor"></picture>
+          </a>
+        </div>
         <div class="col-md d-flex flex-column justify-content-center header__about">
           <p>Профессиональная покраска мдф, шпон, массив.
             <br>Изготовление мдф фасадов.</p>
