Поправил заголовки на главной

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Pictor</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+  <title>Pictor: покраска МДФ, изготовление мебельных фасадов, реставрация.</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -44,14 +45,14 @@
   </header>
   <main class="container">
     <div class="row main-content-index">
-      <div class="col-md-4 mb-5">
-        <h2 class="main-content-index__title text-center text-white bg-dark w-75 mx-auto mb-4">Покраска</h2><a class="mb-5 d-block" href="painting.html"><img class="img-fluid rounded img-thumbnail mx-auto d-block" src="img/01.jpg" alt="Покраска"></a><a class="btn btn-primary d-block mx-auto" href="painting.html">Узнать больше</a></div>
+      <div class="col-md-4">
+        <h2 class="h4 main-content-index__title text-center text-white bg-dark w-75 mx-auto mb-4">Покраска</h2><a class="mb-5 d-block" href="painting.html"><img class="img-fluid rounded img-thumbnail mx-auto d-block" src="img/01.jpg" alt="Покраска"></a><a class="btn btn-primary d-block mx-auto" href="painting.html">Узнать больше</a></div>
       <div
-        class="col-md-4 mb-5">
-        <h2 class="main-content-index__title text-center text-white bg-dark w-75 mx-auto mb-4">Изготовление</h2><a class="mb-5 d-block" href="production.html"><img class="img-fluid rounded img-thumbnail mx-auto d-block" src="img/02.jpg" alt="Изготовление"></a><a class="btn btn-primary d-block mx-auto" href="production.html">Узнать больше</a></div>
+        class="col-md-4">
+        <h2 class="h4 main-content-index__title text-center text-white bg-dark w-75 mx-auto mb-4">Изготовление</h2><a class="mb-5 d-block" href="production.html"><img class="img-fluid rounded img-thumbnail mx-auto d-block" src="img/02.jpg" alt="Изготовление"></a><a class="btn btn-primary d-block mx-auto" href="production.html">Узнать больше</a></div>
     <div
-      class="col-md-4 mb-5">
-      <h2 class="main-content-index__title text-center text-white bg-dark w-75 mx-auto mb-4">Реставрация</h2><a class="mb-5 d-block" href="restoration.html"><img class="img-fluid rounded img-thumbnail mx-auto d-block" src="img/03.jpg" alt="Реставрация"></a><a class="btn btn-primary d-block mx-auto" href="restoration.html">Узнать больше</a></div>
+      class="col-md-4">
+      <h2 class="h4 main-content-index__title text-center text-white bg-dark w-75 mx-auto mb-4">Реставрация</h2><a class="mb-5 d-block" href="restoration.html"><img class="img-fluid rounded img-thumbnail mx-auto d-block" src="img/03.jpg" alt="Реставрация"></a><a class="btn btn-primary d-block mx-auto" href="restoration.html">Узнать больше</a></div>
       </div>
   </main>
   <footer class="container-fluid bg-dark">
