--- a/restoration.html
+++ b/restoration.html
@@ -14,7 +14,7 @@
 <body>
   <header class="header d-flex flex-column d-md-block">
     <div class="container order-2">
-      <div class="row">
+      <div class="row header__top-row no-gutters">
         <div class="col-md d-none d-md-flex flex-column justify-content-center header__contacts"><address><abbr title="Телефон"><strong>Тел.:</strong></abbr><br>+79313483826<br>+79213009822<br></address><address><strong>Адрес:</strong><br>Санкт-Петербург<br>Октябрьская набережная д.50</address></div>
         <div class="col-md">
           <a href="index.html">
