Перенёс цены на покраску в таблицу

--- a/painting.html
+++ b/painting.html
@@ -46,16 +46,54 @@
   <main class="container bg-semitransparent p-4">
     <p>Наш малярный цех предлагает широкий спектр услуг по профессиональной покраске столярных изделий, корпусной мебели и других деталей интерьера.</p>
     <p>Осуществляем покраску различных пород дерева, мдф, дсп, хдф, фанеры, пластика и шпона. Работаем с использованием высококачественных материалов и оборудования.</p>
-    <p class="mb-4">Выполняем работу любой сложности в короткие сроки по доступным ценам! Для постоянных клиентов действует гибкая система скидок.</p><span>Виды покрасочных работ и цены (цена покрытия за 1 кв.м.):</span>
-    <ul type="disk">
-      <li>Матовое плоское от 2000 руб.</li>
-      <li>Матовое с фрезеровкой от 2500 руб.</li>
-      <li>Глянец плоский от 4500 руб.</li>
-      <li>Матовое + патина от 3600 руб.</li>
-      <li>Шпон под лак от 1500 руб.</li>
-      <li>Шпон + тон матовый лак от 2200 руб.</li>
-      <li>Шпон + тон высокий глянец от 4600 руб.</li>
-    </ul><a class="btn btn-primary mb-4" href="https://yadi.sk/i/dqgiRV2y3Lqqor">Скачать прайс-лист</a>
+    <p class="mb-4">Выполняем работу любой сложности в короткие сроки по доступным ценам! Для постоянных клиентов действует гибкая система скидок.</p>
+    <table class="table table-bordered table-striped bg-warning">
+      <caption>Виды покрасочных работ и цены</caption>
+      <thead>
+        <tr scope="row">
+          <th scope="col">#</th>
+          <th scope="col">Виды работ</th>
+          <th scope="col">Цена от (рублей за квадратный метр)</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr scope="row">
+          <td>1</td>
+          <td>Матовое плоское</td>
+          <td>2000 &#x20BD;</td>
+        </tr>
+        <tr scope="row">
+          <td>2</td>
+          <td>Матовое с фрезеровкой</td>
+          <td>2500 &#x20BD;</td>
+        </tr>
+        <tr scope="row">
+          <td>3</td>
+          <td>Глянец плоский</td>
+          <td>4500 &#x20BD;</td>
+        </tr>
+        <tr scope="row">
+          <td>4</td>
+          <td>Матовое + патина</td>
+          <td>3600 &#x20BD;</td>
+        </tr>
+        <tr scope="row">
+          <td>5</td>
+          <td>Шпон под лак</td>
+          <td>1500 &#x20BD;</td>
+        </tr>
+        <tr scope="row">
+          <td>6</td>
+          <td>Шпон + тон матовый лак</td>
+          <td>2200 &#x20BD;</td>
+        </tr>
+        <tr scope="row">
+          <td>7</td>
+          <td>Шпон + тон высокий глянец</td>
+          <td>4600 &#x20BD;</td>
+        </tr>
+      </tbody>
+    </table><a class="btn btn-primary mb-4" href="https://yadi.sk/i/dqgiRV2y3Lqqor">Скачать прайс-лист</a>
     <p>Выполняем любые спецэффекты : Патина, Тонировка, Глянец Краколет, Декапе, Полировка, Перламутр, Мрамор, Металлический мрамор, Жемчуг, Металлик, Текстурный металлик, Паутинка, Старение. Также возможны различные сочетания спецэффектов (цена варьируется
       от сложности заказа).</p>
     <p>Будем рады сотрудничать с Вами!</p>
