Перенёс остальные расценки в таблицы

--- a/production-flat.html
+++ b/production-flat.html
@@ -59,20 +59,42 @@
         цвет долгие годы.</li>
       <li>Собственное производство.</li>
       <li>Каждого порадует возможность обсудить детали изготовления фасадов и внести коррективы в форму и другие параметры мебельных деталей.</li>
-    </ol><span>Цена изготовления (за 1 кв.м.)</span>
-    <ul>
-      <li>Матовые фасады - от 3000 руб.</li>
-      <li>Глянцевые фасады - от 5200 руб.</li>
-      <li>Спецэффекты - от 5200 руб.</li>
-    </ul>
+    </ol>
+    <table class="table table-bordered table-striped bg-warning">
+      <caption>Цены на изготовление плоских фасадов</caption>
+      <thead>
+        <tr scope="row">
+          <th scope="col">#</th>
+          <th scope="col">Виды работ</th>
+          <th scope="col">Цена от (рублей за квадратный метр)</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr scope="row">
+          <td>1</td>
+          <td>Матовые фасады</td>
+          <td>3000 &#x20BD;</td>
+        </tr>
+        <tr scope="row">
+          <td>2</td>
+          <td>Глянцевые фасады</td>
+          <td>5200 &#x20BD;</td>
+        </tr>
+        <tr scope="row">
+          <td>3</td>
+          <td>Спецэффекты</td>
+          <td>5200 &#x20BD;</td>
+        </tr>
+      </tbody>
+    </table>
     <h2>Примеры мебели с крашенными фасадами:</h2>
-    <div class="row mb-4">
-      <div class="col-md-6"><img class="img-fluid rounded mx-auto d-block" src="img/flat-01.jpg" alt="Пример плоских фасадов"></div>
-      <div class="col-md-6"><img class="img-fluid rounded mx-auto d-block" src="img/flat-02.jpg" alt="Пример плоских фасадов"></div>
+    <div class="row">
+      <div class="col-md-6 mb-4"><img class="img-fluid rounded mx-auto d-block" src="img/flat-01.jpg" alt="Пример плоских фасадов"></div>
+      <div class="col-md-6 mb-4"><img class="img-fluid rounded mx-auto d-block" src="img/flat-02.jpg" alt="Пример плоских фасадов"></div>
     </div>
     <div class="row">
-      <div class="col-md-6"><img class="img-fluid rounded mx-auto d-block" src="img/flat-03.jpg" alt="Пример плоских фасадов"></div>
-      <div class="col-md-6"><img class="img-fluid rounded mx-auto d-block" src="img/flat-04.jpg" alt="Пример плоских фасадов"></div>
+      <div class="col-md-6 mb-4"><img class="img-fluid rounded mx-auto d-block" src="img/flat-03.jpg" alt="Пример плоских фасадов"></div>
+      <div class="col-md-6 mb-4"><img class="img-fluid rounded mx-auto d-block" src="img/flat-04.jpg" alt="Пример плоских фасадов"></div>
     </div>
   </main>
   <footer class="container-fluid bg-dark">
