--- a/production-mill.html
+++ b/production-mill.html
@@ -60,11 +60,29 @@
       <li>Собственное производство.</li>
       <li>Каждого порадует возможность обсудить детали изготовления фасадов и внести коррективы в форму и другие параметры мебельных деталей.</li>
       <li>Изготовление фрезерованных фасадов по вашему образцу или чертежу.</li>
-    </ol><span>Цена изготовления (за 1 кв.м.)</span>
-    <ul>
-      <li>Матовые фасады - от 4000 руб.</li>
-      <li>Глянцевые фасады - от 6000 руб.</li>
-    </ul>
+    </ol>
+    <table class="table table-bordered table-striped bg-warning">
+      <caption>Цены на изготовление фрезерованных фасадов</caption>
+      <thead>
+        <tr scope="row">
+          <th scope="col">#</th>
+          <th scope="col">Виды работ</th>
+          <th scope="col">Цена от (рублей за квадратный метр)</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr scope="row">
+          <td>1</td>
+          <td>Матовые фасады</td>
+          <td>4000 &#x20BD;</td>
+        </tr>
+        <tr scope="row">
+          <td>2</td>
+          <td>Глянцевые фасады</td>
+          <td>6000 &#x20BD;</td>
+        </tr>
+      </tbody>
+    </table>
     <h2>Примеры фрезерованных фасадов:</h2>
     <div class="row mb-4">
       <div class="col-md-3 col-sm-6"><img class="img-fluid rounded mx-auto d-block" src="img/mill-01.png" alt="Пример фрезерованных фасадов"></div>
